# libicp

./: CMakeLists.txt  README.TXT
src/: icp.cpp  icp.h  icpPointToPlane.cpp  icpPointToPlane.h  icpPointToPoint.cpp
